feat: Update document lite api
Signed-off-by: Otavio Santana <otaviopolianasantana@gmail.com>